// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`posthog core capture() produces a representative $groupidentify capture from a real instance 1`] = `
{
  "$set_once": {
    "$current_url": "https://example.com/",
    "$host": "example.com",
    "$initial__kx": null,
    "$initial_current_url": "https://example.com/",
    "$initial_dclid": null,
    "$initial_epik": null,
    "$initial_fbclid": null,
    "$initial_gad_source": null,
    "$initial_gbraid": null,
    "$initial_gclid": null,
    "$initial_gclsrc": null,
    "$initial_host": "example.com",
    "$initial_igshid": null,
    "$initial_irclid": null,
    "$initial_li_fat_id": null,
    "$initial_mc_cid": null,
    "$initial_msclkid": null,
    "$initial_pathname": "/",
    "$initial_qclid": null,
    "$initial_rdt_cid": null,
    "$initial_referrer": "https://referrer.com",
    "$initial_referring_domain": "referrer.com",
    "$initial_sccid": null,
    "$initial_ttclid": null,
    "$initial_twclid": null,
    "$initial_utm_campaign": null,
    "$initial_utm_content": null,
    "$initial_utm_medium": null,
    "$initial_utm_source": null,
    "$initial_utm_term": null,
    "$initial_wbraid": null,
    "$pathname": "/",
    "$referrer": "https://referrer.com",
    "$referring_domain": "referrer.com",
    "_kx": null,
    "dclid": null,
    "epik": null,
    "fbclid": null,
    "gad_source": null,
    "gbraid": null,
    "gclid": null,
    "gclsrc": null,
    "igshid": null,
    "irclid": null,
    "li_fat_id": null,
    "mc_cid": null,
    "msclkid": null,
    "qclid": null,
    "rdt_cid": null,
    "sccid": null,
    "ttclid": null,
    "twclid": null,
    "utm_campaign": null,
    "utm_content": null,
    "utm_medium": null,
    "utm_source": null,
    "utm_term": null,
    "wbraid": null,
  },
  "event": "$groupidentify",
  "properties": {
    "$browser": "Chrome",
    "$browser_language": "en-US",
    "$browser_language_prefix": "en",
    "$browser_version": 120,
    "$config_defaults": "unset",
    "$configured_session_timeout_ms": 1800000,
    "$current_url": "https://example.com/",
    "$device_id": "<generated-device-id>",
    "$device_type": "Desktop",
    "$group_key": "org::5",
    "$group_set": {
      "foo": 5,
      "group": "property",
    },
    "$group_type": "organization",
    "$groups": {
      "organization": "org::5",
    },
    "$initialization_time": "<initialization-time>",
    "$insert_id": "<insert-id>",
    "$is_identified": false,
    "$lib": "web",
    "$lib_rate_limit_remaining_tokens": 99,
    "$lib_version": "<sdk-version>",
    "$os": "Windows",
    "$os_version": "10",
    "$pathname": "/",
    "$process_person_profile": true,
    "$raw_user_agent": "<user-agent>",
    "$recording_status": "disabled",
    "$referrer": "https://referrer.com",
    "$referring_domain": "referrer.com",
    "$screen_height": 0,
    "$screen_width": 0,
    "$sdk_debug_extensions_init_method": "synchronous",
    "$sdk_debug_extensions_init_time_ms": "<extension-init-time>",
    "$sdk_debug_retry_queue_size": 0,
    "$sdk_dist_channel": "npm",
    "$session_entry_host": "example.com",
    "$session_entry_pathname": "/",
    "$session_entry_referrer": "https://referrer.com",
    "$session_entry_referring_domain": "referrer.com",
    "$session_entry_url": "https://example.com/",
    "$session_id": "<generated-session-id>",
    "$time": "<event-time>",
    "$timezone": "<runtime-timezone>",
    "$timezone_offset": "<runtime-timezone-offset>",
    "$viewport_height": 768,
    "$viewport_width": 1024,
    "$window_id": "<generated-window-id>",
    "distinct_id": "<generated-distinct-id>",
    "token": "group-snapshot-token",
  },
  "timestamp": "<capture-timestamp>",
  "uuid": "<event-uuid>",
}
`;

exports[`posthog core capture() produces a representative custom event capture 1`] = `
{
  "event": "report exported",
  "properties": {
    "$browser": "Chrome",
    "$browser_language": "en-US",
    "$browser_language_prefix": "en",
    "$browser_version": 120,
    "$config_defaults": "unset",
    "$configured_session_timeout_ms": 1800000,
    "$current_url": "https://example.com/",
    "$device_id": "<generated-device-id>",
    "$device_type": "Desktop",
    "$initialization_time": "<initialization-time>",
    "$insert_id": "<insert-id>",
    "$is_identified": false,
    "$lib": "web",
    "$lib_rate_limit_remaining_tokens": 99,
    "$lib_version": "<sdk-version>",
    "$os": "Windows",
    "$os_version": "10",
    "$pathname": "/",
    "$process_person_profile": false,
    "$raw_user_agent": "<user-agent>",
    "$recording_status": "disabled",
    "$referrer": "https://referrer.com",
    "$referring_domain": "referrer.com",
    "$screen_height": 0,
    "$screen_width": 0,
    "$sdk_debug_extensions_init_method": "synchronous",
    "$sdk_debug_extensions_init_time_ms": "<extension-init-time>",
    "$sdk_debug_retry_queue_size": 0,
    "$sdk_dist_channel": "npm",
    "$session_entry_host": "example.com",
    "$session_entry_pathname": "/",
    "$session_entry_referrer": "https://referrer.com",
    "$session_entry_referring_domain": "referrer.com",
    "$session_entry_url": "https://example.com/",
    "$session_id": "<generated-session-id>",
    "$time": "<event-time>",
    "$timezone": "<runtime-timezone>",
    "$timezone_offset": "<runtime-timezone-offset>",
    "$viewport_height": 768,
    "$viewport_width": 1024,
    "$window_id": "<generated-window-id>",
    "distinct_id": "<generated-distinct-id>",
    "export_format": "csv",
    "filters": {
      "date_range": "last_30_days",
      "teams": [
        "analytics",
        "growth",
      ],
    },
    "plan": "growth",
    "row_count": 42,
    "token": "snapshot-token",
    "workspace_id": "workspace-42",
  },
  "timestamp": "<capture-timestamp>",
  "uuid": "<event-uuid>",
}
`;
